[package]
name = "socks5_rust"
version = "0.1.0"
authors = ["guohaiming <guohaiming@guohaiming.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.0"
tokio = {version = "0.2.11",features = ["full", "rt-core", "tcp"]}
byteorder = "1.3.4"
futures = "0.3.0"

[features]
nightly = []
